# preflight-ux

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SPEC.md  package.json  pyproject.toml  vercel.json
.claude-plugin/: marketplace.json
api/: panel.js
benchmark/: README.md  REVIEW_NOTES.md  SECOND_SCORER_REVIEW_2026-05-12.md
calibration/: README.md  all-benchmark-score-comparison.md  apple-maps-2012-generic-critique.score.json  apple-maps-2012-heuristic-evaluation.score.json  false_positives.md  govuk-verify-2016-generic-critique.score.json  govuk-verify-2016-heuristic-evaluation.score.json  govuk-verify-2016-panel-comparison.md  govuk-verify-2016-public-service-panel-v0-3.score.json  healthcare-gov-2013-generic-critique.score.json  healthcare-gov-2013-heuristic-evaluation.score.json  misses.md  persona_issue_matrix.yaml  snapchat-redesign-2018-generic-critique.score.json  snapchat-redesign-2018-heuristic-evaluation.score.json  windows-8-2012-generic-critique.score.json  windows-8-2012-heuristic-evaluation.score.json
docs/: BENCHMARK_SELECTION.md  EVALUATION_PROTOCOL.md  LITERATURE_REVIEW.md  POSITIONING.md  PRODUCT_UI.md  REPORT_FORMAT.md
framework/: scoring.md
panels/: default.yaml  public-service-access.yaml
personas/: README.md
preflight-ux-review/: README.md
prompts/: README.md  expert-persona-review.v0.2.md  normalize-findings.v0.2.md  panel-action-card.v0.2.md  synthesize-report.v0.2.md  user-type-review.v0.2.md
reports/: README.md  govuk-verify-2016-public-service-panel-v0-3.md
(+100 files in other folders)
