[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "preflight-ux"
version = "0.1.0"
description = "Tooling for benchmark-calibrated pre-ship UX risk detection."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
uxpanel = "uxpanel.cli:main"

[tool.setuptools.packages.find]
include = ["uxpanel*"]
